--- a/css/style.css
+++ b/css/style.css
@@ -9861,7 +9861,7 @@ textarea.form-control {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  background: #75dff1;
+  background: #F1B108;
   color:#2f0458;
 }
 
